[tool.poetry]
name = "spellchecker"
version = "0.1.0"
description = ""
authors = ["Max Barshay <maxbarshay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.6.1"
symspellpy = "^6.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
